# permawrite

./: .commit-msg.tmp  .gitattributes  .gitignore  3agent.md  AGENTS.md  CODEBASE_STATS.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  LICENSE-APACHE  LICENSE-MIT  PORTING.md  README.md  SECURITY.md
demo/: README.md
docs/: 3agent.md  AGENTS.md  (+69 more)
mfn-bls/: Cargo.toml  README.md
mfn-bls/src/: lib.rs  sig.rs
mfn-checkpoint-log/: Cargo.toml
mfn-checkpoint-log/src/: lib.rs  log.rs  summary.rs
mfn-cli/: Cargo.toml  README.md
mfn-cli/src/: checkpoint_log.rs  claims_cmd.rs  cli.rs  lib.rs  light_follow_quorum.rs  light_subjectivity.rs  light_wallet.rs  operator_cmd.rs  rpc.rs  upload_artifact_store.rs  uploads_cmd.rs  wallet_cmd.rs  wallet_store.rs
mfn-cli/src/cli/: parse.rs
mfn-cli/tests/: chunk_p2p_auto_fanout_smoke.rs  chunk_p2p_smoke.rs  chunk_p2p_three_node_smoke.rs  chunk_p2p_three_validator_produce_smoke.rs  chunk_p2p_two_node_smoke.rs  claim_smoke.rs  claims_smoke.rs  cli_smoke.rs  f7_wallet_fund.rs  light_scan_smoke.rs  light_scan_three_validator_smoke.rs  send_smoke.rs  storage_operator_smoke.rs  upload_smoke.rs  uploads_smoke.rs  wallet_smoke.rs
mfn-consensus/: Cargo.toml  README.md
mfn-consensus/src/: block.rs  bls_stub.rs  bond_wire.rs  bonding.rs  chain_checkpoint.rs  checkpoint_codec.rs  claims.rs  coinbase.rs  consensus.rs  constitution.rs  emission.rs  extra_codec.rs  fraud_proof.rs  header_verify.rs  lib.rs  slashing.rs  storage.rs  storage_operator_evolution.rs  storage_operator_wire.rs  transaction.rs  validator_evolution.rs  validity_proof.rs  validity_stark_stub.rs  validity_stark_winterfell.rs
mfn-consensus/src/block/: apply.rs  builder.rs  error.rs  genesis.rs  header.rs  internal.rs  mod.rs  state.rs  tests.rs  wire.rs
mfn-consensus/src/chain_checkpoint/: decode.rs  encode.rs  internal.rs  mod.rs  tests.rs
mfn-consensus/src/consensus/: engine.rs  mod.rs  types.rs
mfn-consensus/src/header_verify/: body.rs  header.rs  internal.rs  mod.rs  tests.rs  types.rs
mfn-consensus/src/transaction/: build.rs  codec.rs  id.rs  internal.rs  mod.rs  tests.rs  verify.rs  wire.rs
mfn-consensus/src/validator_evolution/: bitmap.rs  bond_ops.rs  equivocation.rs  internal.rs  liveness.rs  mod.rs  tests.rs  unbond.rs
mfn-consensus/tests/: apply_block_proptest.proptest-regressions  apply_block_proptest.rs  block_apply.rs  emission_simulation.rs  integration.rs  producer_treasury_settlement.rs  validator_finality_evolution.rs
mfn-consensus/tests/validator_finality_evolution/: bond_ops.rs  epoch_checkpoint.rs  finality_rejection.rs  header_roots.rs  liveness.rs  main.rs  pre_block.rs  producer_proof.rs  slashing.rs  support.rs
mfn-crypto/: Cargo.toml  README.md
mfn-crypto/src/: authorship.rs  bulletproofs.rs  clsag.rs  codec.rs  decoy.rs  domain.rs  encrypted_amount.rs  hash.rs  lib.rs  lsag.rs  merkle.rs  oom.rs  pedersen.rs  point.rs  range.rs  scalar.rs  schnorr.rs  stealth.rs  utxo_tree.rs  vrf.rs
mfn-crypto/tests/: integration.rs
mfn-light/: Cargo.toml  README.md
mfn-light/src/: chain.rs  checkpoint.rs  lib.rs
mfn-light/tests/: follow_chain.rs
mfn-net/: Cargo.toml  README.md
mfn-net/src/: block_sync.rs  chunk_v1.rs  chunk_v2.rs  frame.rs  fraud_proof_v1.rs  gossip.rs  handshake.rs  lib.rs  light_follow.rs  peer_addr.rs  peer_diversity.rs  production.rs  serve.rs  socks5.rs  transport.rs  validity_proof_v1.rs
mfn-node/: Cargo.toml  README.md
mfn-node/src/: archive_export.rs  chain.rs  dandelion.rs  demo_genesis.rs  fraud_contest.rs  genesis_spec.rs  lib.rs  mempool.rs  mfnd_cli.rs  mfnd_serve.rs  network.rs  node_store.rs  p2p_block_sync.rs  p2p_boot.rs  p2p_chunk_fanout.rs  p2p_chunk_inbox.rs  p2p_fanout.rs  p2p_gossip.rs  p2p_light_follow_fetch.rs  p2p_peer_quarantine.rs  p2p_reconnect_plan.rs  p2p_repair_sweep.rs  producer.rs  role_topology.rs  runner.rs  store.rs
mfn-node/src/network/: frame.rs  handshake.rs  mod.rs
mfn-node/testdata/: devnet_one_validator_fast_produce.json  devnet_one_validator_synth_decoys.json  devnet_one_validator_wallet_payout.json  devnet_three_validators.json  devnet_three_validators_produce.json  devnet_three_validators_wallet_payout.json  public_devnet_v1.checkpoints.jsonl  public_devnet_v1.json  public_devnet_v1.manifest.json
mfn-node/tests/: chain_checkpoint_integration.rs  light_header_verify.rs  mempool_integration.rs  mfnd_smoke.rs  multi_validator_producer.rs  public_devnet_manifest.rs  single_validator_flow.rs  stdout_timeout.rs  three_validator_all_produce_smoke.rs  three_validator_produce_smoke.rs
mfn-rpc/: Cargo.toml  README.md
mfn-rpc/src/: dispatch.rs  lib.rs
mfn-rpc/src/dispatch/: rpc_method_meta.rs  rpc_params.rs
mfn-runtime/: Cargo.toml  README.md
mfn-runtime/examples/: genesis_validator_bls_pop.rs
mfn-runtime/src/: chain.rs  demo_genesis.rs  genesis_spec.rs  lib.rs  mempool.rs  mempool_snapshot.rs  producer.rs  proof_pool.rs  proof_pool_snapshot.rs  proposal_wire.rs
mfn-runtime/testdata/: devnet_one_validator.json  devnet_one_validator_synth_decoys.json
mfn-storage/: Cargo.toml  README.md
mfn-storage-operator/: Cargo.toml  README.md
mfn-storage-operator/src/: backfill.rs  chunk_client.rs  chunk_http.rs  chunk_push.rs  daemon.rs  inbox_backfill.rs  lib.rs  pm23.rs  prove.rs  rpc.rs
mfn-storage-operator/tests/: chunk_http_smoke.rs
mfn-storage/src/: commitment.rs  endowment.rs  lib.rs  spora.rs
mfn-store/: Cargo.toml  README.md
mfn-store/src/: chunk_inbox.rs  error.rs  fs.rs  lib.rs  mempool_persist.rs  peers_persist.rs  proof_pool_persist.rs  redb_store.rs  replay.rs  trait.rs  validate.rs
mfn-wallet/: Cargo.toml  README.md
mfn-wallet/src/: claiming.rs  decoy.rs  error.rs  keys.rs  lib.rs  owned.rs  scan.rs  spend.rs  stored.rs  upload.rs  upload_artifact.rs  wallet.rs
mfn-wallet/tests/: canonical_conformance.rs  end_to_end.rs
mfn-wasm/: Cargo.toml  README.md
mfn-wasm/src/: checkpoint_log_core.rs  core.rs  header_verify_core.rs  lib.rs  light_chain_core.rs  light_quorum_core.rs  scan_core.rs  transfer_core.rs  upload_core.rs  wasm.rs
(+683 files in other folders)
