[workspace]
resolver = "2"
members = [
    "mfn-crypto",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["MoneyFund Network"]
repository = "https://github.com/cloonan-group/cloonan-group"
description = "MoneyFund Network — Monero-grade privacy fused with > Arweave-grade permanence"

[workspace.dependencies]
# Cryptographic primitives ─ all audited, all the libraries Signal / Zcash /
# Monero / Solana / Polkadot already trust in production.
curve25519-dalek = { version = "4.1", default-features = false, features = [
    "alloc",
    "precomputed-tables",
    "zeroize",
    "rand_core",
] }
sha2 = { version = "0.10", default-features = false }
subtle = { version = "2.5", default-features = false }
zeroize = { version = "1.7", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# General utilities
thiserror = "1.0"
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# Dev / test
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
overflow-checks = true
debug = "line-tables-only"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
