[workspace]
resolver = "2"
members = [
    "mfn-crypto",
    "mfn-bls",
    "mfn-consensus",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Shane Cloonan", "Permawrite contributors"]
repository = "https://github.com/shanecloonan/permawrite"
description = "Permawrite — privacy-preserving permanent-storage blockchain (reference Rust implementation)"

[workspace.dependencies]
# Cryptographic primitives ─ all audited, all the libraries Signal / Zcash /
# Monero / Solana / Polkadot already trust in production.
curve25519-dalek = { version = "4.1", default-features = false, features = [
    "alloc",
    "precomputed-tables",
    "zeroize",
    "rand_core",
] }
sha2 = { version = "0.10", default-features = false }
subtle = { version = "2.5", default-features = false }
zeroize = { version = "1.7", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# BLS12-381 — pairing-friendly curve, pure-Rust, no FFI. We use the
# actively-maintained `bls12_381_plus` fork (mikelodder7) which tracks the
# current `sha2` 0.10 / `digest` 0.10 ecosystem.
bls12_381_plus = { version = "0.8", features = ["expose-fields", "std"] }
elliptic-curve = { version = "0.13", features = ["hash2curve"] }
ff = { version = "0.13", default-features = false }
group = { version = "0.13", default-features = false }
pairing = { version = "0.23", default-features = false }

# General utilities
thiserror = "1.0"
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
overflow-checks = true
debug = "line-tables-only"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
