[package]
name = "mfn-bls"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MoneyFund Network — BLS12-381 aggregate signatures + KZG commitments."

[dependencies]
bls12_381_plus = { workspace = true }
elliptic-curve = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
pairing = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
