[package]
name = "mfn-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Permawrite operator CLI: JSON-RPC client for mfnd and wallet commands."

[[bin]]
name = "mfn-cli"
path = "src/bin/mfn-cli.rs"

[lints.clippy]
all = "warn"

[dependencies]
curve25519-dalek = { workspace = true }
hex = { workspace = true }
mfn-consensus = { path = "../mfn-consensus" }
mfn-crypto = { path = "../mfn-crypto" }
mfn-light = { path = "../mfn-light" }
mfn-storage = { path = "../mfn-storage" }
mfn-wallet = { path = "../mfn-wallet" }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mfn-consensus = { path = "../mfn-consensus" }
mfn-node = { path = "../mfn-node" }
mfn-store = { path = "../mfn-store" }
