[package]
name = "mfn-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Permawrite operator CLI: JSON-RPC client for mfnd and wallet commands."

[[bin]]
name = "mfn-cli"
path = "src/bin/mfn-cli.rs"

[lints.clippy]
all = "warn"

[dependencies]
curve25519-dalek = { workspace = true }
hex = { workspace = true }
mfn-checkpoint-log = { path = "../mfn-checkpoint-log" }
mfn-consensus = { path = "../mfn-consensus" }
mfn-crypto = { path = "../mfn-crypto" }
mfn-light = { path = "../mfn-light" }
mfn-net = { path = "../mfn-net" }
mfn-storage = { path = "../mfn-storage" }
mfn-wallet = { path = "../mfn-wallet" }
mfn-storage-operator = { path = "../mfn-storage-operator" }
rand_core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mfn-bls = { path = "../mfn-bls" }
mfn-consensus = { path = "../mfn-consensus" }
mfn-node = { path = "../mfn-node" }
mfn-store = { path = "../mfn-store" }
