[package]
name = "mfn-consensus"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Permawrite — state-transition function: transactions, coinbase, emission, blocks, consensus."

[lints.clippy]
all = "warn"

[dependencies]
mfn-crypto = { path = "../mfn-crypto" }

curve25519-dalek = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
rand_core = { workspace = true }

thiserror = { workspace = true }
hex = { workspace = true }
