[package]
name = "mfn-consensus"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Permawrite — state-transition function: transactions, coinbase, emission, blocks, consensus."

[lints.clippy]
all = "warn"

[features]
default = ["bls", "winterfell"]
# Full BLS12-381 consensus (nodes). Off for `wasm32` wallet scan/sign builds.
bls = ["dep:mfn-bls"]
winterfell = ["dep:winterfell", "dep:winter-utils"]

[dependencies]
mfn-crypto = { path = "../mfn-crypto" }
mfn-bls = { path = "../mfn-bls", optional = true }
mfn-storage = { path = "../mfn-storage" }
zeroize = { workspace = true }

curve25519-dalek = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
rand_core = { workspace = true }

thiserror = { workspace = true }
hex = { workspace = true }
winterfell = { version = "0.10.1", optional = true }
winter-utils = { version = "0.10.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
proptest = { workspace = true }
