[package]
name = "mfn-crypto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MoneyFund Network — discrete-log primitives (ed25519): Schnorr, Pedersen, stealth addresses, encrypted amounts, key images."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }

[dependencies]
curve25519-dalek = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
