[package]
name = "mfn-light"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Permawrite — light-client chain follower. Header-only state tracking on top of mfn-consensus::verify_header. The foundation for wallets, WASM clients, and cross-chain bridges."

[lints.clippy]
all = "warn"

[dependencies]
mfn-crypto = { path = "../mfn-crypto" }
mfn-bls = { path = "../mfn-bls" }
mfn-storage = { path = "../mfn-storage" }
mfn-consensus = { path = "../mfn-consensus" }

thiserror = { workspace = true }

[dev-dependencies]
mfn-node = { path = "../mfn-node" }
hex = { workspace = true }
