[package]
name = "mfn-net"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Permawrite — P2P framing, handshakes, and mfnd serve P2P loops (blocking TCP, no async runtime)."

[lints.clippy]
all = "warn"

[dependencies]
thiserror = { workspace = true }
