[package]
name = "mfn-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Permawrite — node-side glue around mfn-consensus: in-memory chain driver, block-application orchestration, future home of mempool / P2P / RPC."

[lints.clippy]
all = "warn"

[dependencies]
mfn-crypto = { path = "../mfn-crypto" }
mfn-bls = { path = "../mfn-bls" }
mfn-storage = { path = "../mfn-storage" }
mfn-consensus = { path = "../mfn-consensus" }

thiserror = { workspace = true }

[dev-dependencies]
curve25519-dalek = { workspace = true }
hex = { workspace = true }
mfn-light = { path = "../mfn-light" }
mfn-wallet = { path = "../mfn-wallet" }
