[package]
name = "mfn-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Permawrite — node daemon: persistence, JSON-RPC, P2P scaffold, mfnd binary."

[[bin]]
name = "mfnd"
path = "src/bin/mfnd.rs"

[lints.clippy]
all = "warn"

[dependencies]
mfn-runtime = { path = "../mfn-runtime" }
mfn-store = { path = "../mfn-store" }
mfn-rpc = { path = "../mfn-rpc" }
mfn-crypto = { path = "../mfn-crypto" }
mfn-bls = { path = "../mfn-bls" }
mfn-storage = { path = "../mfn-storage" }
mfn-consensus = { path = "../mfn-consensus" }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[target.'cfg(unix)'.dependencies]
ctrlc = "3.4"

[dev-dependencies]
curve25519-dalek = { workspace = true }
hex = { workspace = true }
mfn-light = { path = "../mfn-light" }
mfn-wallet = { path = "../mfn-wallet" }
serde_json = { workspace = true }
