[package]
name = "mfn-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Permawrite — in-process chain driver, mempool, and block producer (no IO, no networking)."

[lints.clippy]
all = "warn"

[dependencies]
mfn-crypto = { path = "../mfn-crypto" }
mfn-bls = { path = "../mfn-bls" }
mfn-storage = { path = "../mfn-storage" }
mfn-consensus = { path = "../mfn-consensus" }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
curve25519-dalek = { workspace = true }
mfn-bls = { path = "../mfn-bls" }
