[package]
name = "mfn-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Permawrite — permanent-storage primitives: chunking, SPoRA storage proofs, endowment math."

[lints.clippy]
all = "warn"

[dependencies]
mfn-crypto = { path = "../mfn-crypto" }

curve25519-dalek = { workspace = true }
sha2 = { workspace = true }

thiserror = { workspace = true }
hex = { workspace = true }
