[package]
name = "mfn-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Permawrite — chain checkpoint and block-log persistence (filesystem today; KV backends later)."

[lints.clippy]
all = "warn"

[dependencies]
mfn-runtime = { path = "../mfn-runtime" }
mfn-consensus = { path = "../mfn-consensus" }
redb = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
mfn-storage = { path = "../mfn-storage" }
