[package]
name = "mfn-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Permawrite — WebAssembly bindings for wallet and storage primitives (browser wallets, demos)."

[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"

[dependencies]
mfn-storage = { path = "../mfn-storage" }
mfn-wallet = { path = "../mfn-wallet", default-features = false, features = ["wasm-keys"] }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = "0.2"

# Union feature into the workspace `getrandom` graph for wasm32-unknown-unknown.
getrandom = { version = "0.2", features = ["js"] }
