[package]
name = "mfn-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Permawrite — WebAssembly bindings for wallet and storage primitives (browser wallets, demos)."

[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"

[features]
default = ["wasm-keys"]
# Stealth keys + claiming only (smallest WASM).
wasm-keys = ["mfn-wallet/wasm-keys"]
# CLSAG transfer build + block scan (**M4.2**) + BLS header verify (**M4.10**).
wasm-full = [
    "wasm-keys",
    "mfn-wallet/wasm-full",
    "dep:mfn-consensus",
    "dep:mfn-bls",
    "dep:mfn-light",
    "mfn-consensus/bls",
]

[dependencies]
mfn-consensus = { path = "../mfn-consensus", optional = true, default-features = false }
mfn-bls = { path = "../mfn-bls", optional = true }
mfn-light = { path = "../mfn-light", optional = true }
mfn-storage = { path = "../mfn-storage" }
mfn-wallet = { path = "../mfn-wallet", default-features = false }
mfn-crypto = { path = "../mfn-crypto" }
curve25519-dalek = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = "0.2"

# Union feature into the workspace `getrandom` graph for wasm32-unknown-unknown.
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
mfn-consensus = { path = "../mfn-consensus", default-features = false }
mfn-crypto = { path = "../mfn-crypto" }
curve25519-dalek = { workspace = true }
